ZumZumFinancials_Dev1/src/objects/RDIAppSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>AdaptivePassword__c</fullName>
        <label>Adaptive Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdaptiveUserName__c</fullName>
        <label>Adaptive User Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adaptive_Forecast_Version__c</fullName>
        <inlineHelpText>like &apos;Oct 10 Forecast&apos; or like &apos;Sep 10 Forecast&apos;</inlineHelpText>
        <label>Adaptive Forecast Version</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HoursPerDay__c</fullName>
        <label>Hours Per Day</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>RDI App Settings</label>
</CustomObject>